--- a/portfolio.html
+++ b/portfolio.html
@@ -98,12 +98,19 @@
           <ul class="list work-list">
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/tehnokryak.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/tehnokryak.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Технокряк</h2>
                   <p class="worklist-text">Веб-сайт</p>
@@ -112,12 +119,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/new-orlean.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/new-orlean.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">
                     Постер New Orlean vs Golden Star
@@ -128,12 +142,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/seafood.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/seafood.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Ресторан Seafood</h2>
                   <p class="worklist-text">Приложение</p>
@@ -142,12 +163,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/prime.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/prime.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Проект Prime</h2>
                   <p class="worklist-text">Маркетинг</p>
@@ -156,12 +184,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/boxes.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/boxes.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Проект Boxes</h2>
                   <p class="worklist-text">Приложение</p>
@@ -170,12 +205,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/inspiration.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Inspiration has no Borders</h2>
                   <p class="worklist-text">Веб-сайт</p>
@@ -184,12 +226,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/limited-edition.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/limited-edition.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Издание Limited Edition</h2>
                   <p class="worklist-text">Дизайн</p>
@@ -198,12 +247,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/lab.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/lab.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Проект LAB</h2>
                   <p class="worklist-text">Маркетинг</p>
@@ -212,12 +268,19 @@
             </li>
             <li class="worklist-items">
               <a href="" class="link work-link">
-                <img
-                  src="./images/growing-business.jpg"
-                  alt="Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-link-img">
+                  <img
+                    src="./images/growing-business.jpg"
+                    alt="Growing Business"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-link-desc">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="worklist-name">
                   <h2 class="worklist-title">Growing Business</h2>
                   <p class="worklist-text">Приложение</p>
