--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-btn">Заказать услугу</button>
+          <button type="button" class="hero-btn" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -142,29 +144,32 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list services">
-            <li class="items">
+            <li class="services-items">
               <img
                 src="./images/what-we-do_img1.jpg"
                 alt="верстка"
                 width="370"
                 height="294"
               />
+              <p class="services-text">Десктопные приложения</p>
             </li>
-            <li class="items">
+            <li class="services-items">
               <img
                 src="./images/what-we-do_img2.jpg"
                 alt="мультидевайсность"
                 width="370"
                 height="294"
               />
+              <p class="services-text">Мобильные приложения</p>
             </li>
-            <li class="items">
+            <li class="services-items">
               <img
                 src="./images/what-we-do_img3.jpg"
                 alt="визуализация данных"
                 width="370"
                 height="294"
               />
+              <p class="services-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -466,5 +471,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- модалка -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
